--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -10,6 +10,10 @@
   @apply px-3 py-2 border-2 font-semibold border-primary-300 text-primary-300 tracking-wider disabled:border-grey-500 disabled:text-grey-500 disabled:cursor-not-allowed hover:bg-primary-300 hover:text-white disabled:hover:text-grey-500 disabled:hover:bg-white duration-200;
 }
 
+.error-btn {
+  @apply px-3 py-2 border-2 font-semibold border-red-500 text-red-500 tracking-wider disabled:border-grey-500 disabled:text-grey-500 disabled:cursor-not-allowed hover:bg-red-500 hover:text-white disabled:hover:text-grey-500 disabled:hover:bg-white duration-200;
+}
+
 .icon {
   @apply flex justify-center items-center leading-none w-10 h-10 rounded-full hover:bg-[rgba(0,0,0,0.2)];
 }
